@@ -17,27 +17,32 @@
 package org.apache.kafka.tools.streams;
 
 import org.apache.kafka.clients.admin.Admin;
+import org.apache.kafka.clients.admin.AdminClientTestUtils;
 import org.apache.kafka.clients.admin.DeleteStreamsGroupsOptions;
 import org.apache.kafka.clients.admin.DeleteStreamsGroupsResult;
 import org.apache.kafka.clients.admin.DeleteTopicsResult;
 import org.apache.kafka.clients.admin.DescribeStreamsGroupsResult;
+import org.apache.kafka.clients.admin.DescribeTopicsOptions;
+import org.apache.kafka.clients.admin.DescribeTopicsResult;
 import org.apache.kafka.clients.admin.GroupListing;
 import org.apache.kafka.clients.admin.KafkaAdminClient;
 import org.apache.kafka.clients.admin.ListGroupsOptions;
 import org.apache.kafka.clients.admin.ListGroupsResult;
 import org.apache.kafka.clients.admin.ListOffsetsResult;
 import org.apache.kafka.clients.admin.ListStreamsGroupOffsetsResult;
-import org.apache.kafka.clients.admin.MockAdminClient;
 import org.apache.kafka.clients.admin.StreamsGroupDescription;
 import org.apache.kafka.clients.admin.StreamsGroupMemberAssignment;
 import org.apache.kafka.clients.admin.StreamsGroupMemberDescription;
 import org.apache.kafka.clients.admin.StreamsGroupSubtopologyDescription;
+import org.apache.kafka.clients.admin.TopicDescription;
 import org.apache.kafka.clients.consumer.OffsetAndMetadata;
 import org.apache.kafka.common.GroupState;
 import org.apache.kafka.common.GroupType;
 import org.apache.kafka.common.KafkaFuture;
 import org.apache.kafka.common.Node;
 import org.apache.kafka.common.TopicPartition;
+import org.apache.kafka.common.TopicPartitionInfo;
+import org.apache.kafka.common.internals.KafkaFutureImpl;
 import org.apache.kafka.test.TestUtils;
 
 import org.junit.jupiter.api.Test;
@@ -45,6 +50,8 @@ import org.mockito.ArgumentMatchers;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -52,7 +59,9 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 import joptsimple.OptionException;
 
@@ -71,22 +80,23 @@ import static org.mockito.Mockito.when;
 
 public class StreamsGroupCommandTest {
 
+    private static final Admin ADMIN_CLIENT = mock(KafkaAdminClient.class);
+    private static final String BOOTSTRAP_SERVERS = "localhost:9092";
+
     @Test
     public void testListStreamsGroups() throws Exception {
         String firstGroup = "first-group";
         String secondGroup = "second-group";
-        String bootstrapServer = "localhost:9092";
 
-        String[] cgcArgs = new String[]{"--bootstrap-server", bootstrapServer, "--list"};
-        Admin adminClient = mock(KafkaAdminClient.class);
+        String[] cgcArgs = new String[]{"--bootstrap-server", BOOTSTRAP_SERVERS, "--list"};
         ListGroupsResult result = mock(ListGroupsResult.class);
         when(result.all()).thenReturn(KafkaFuture.completedFuture(Arrays.asList(
             new GroupListing(firstGroup, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.STABLE)),
             new GroupListing(secondGroup, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.EMPTY))
         )));
-        when(adminClient.listGroups(any(ListGroupsOptions.class))).thenReturn(result);
-        StreamsGroupCommand.StreamsGroupService service = getStreamsGroupService(cgcArgs, adminClient);
-        Set<String> expectedGroups = Set.of(firstGroup, secondGroup);
+        when(ADMIN_CLIENT.listGroups(any(ListGroupsOptions.class))).thenReturn(result);
+        StreamsGroupCommand.StreamsGroupService service = getStreamsGroupService(cgcArgs);
+        Set<String> expectedGroups = new HashSet<>(Arrays.asList(firstGroup, secondGroup));
 
         final Set[] foundGroups = new Set[]{Set.of()};
         TestUtils.waitForCondition(() -> {
@@ -99,10 +109,9 @@ public class StreamsGroupCommandTest {
 
     @Test
     public void testListWithUnrecognizedOption() {
-        String bootstrapServer = "localhost:9092";
-        String[] cgcArgs = new String[]{"--frivolous-nonsense", "--bootstrap-server", bootstrapServer, "--list"};
+        String[] cgcArgs = new String[]{"--frivolous-nonsense", "--bootstrap-server", BOOTSTRAP_SERVERS, "--list"};
         final Exception exception = assertThrows(OptionException.class, () -> {
-            getStreamsGroupService(cgcArgs, new MockAdminClient());
+            getStreamsGroupService(cgcArgs);
         });
         assertEquals("frivolous-nonsense is not a recognized option", exception.getMessage());
     }
@@ -111,24 +120,22 @@ public class StreamsGroupCommandTest {
     public void testListStreamsGroupsWithStates() throws Exception {
         String firstGroup = "first-group";
         String secondGroup = "second-group";
-        String bootstrapServer = "localhost:9092";
 
-        String[] cgcArgs = new String[]{"--bootstrap-server", bootstrapServer, "--list", "--state"};
-        Admin adminClient = mock(KafkaAdminClient.class);
+        String[] cgcArgs = new String[]{"--bootstrap-server", BOOTSTRAP_SERVERS, "--list", "--state"};
         ListGroupsResult resultWithAllStates = mock(ListGroupsResult.class);
         when(resultWithAllStates.all()).thenReturn(KafkaFuture.completedFuture(Arrays.asList(
             new GroupListing(firstGroup, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.STABLE)),
             new GroupListing(secondGroup, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.EMPTY))
         )));
-        when(adminClient.listGroups(any(ListGroupsOptions.class))).thenReturn(resultWithAllStates);
-        StreamsGroupCommand.StreamsGroupService service = getStreamsGroupService(cgcArgs, adminClient);
-        Set<GroupListing> expectedListing = Set.of(
+        when(ADMIN_CLIENT.listGroups(any(ListGroupsOptions.class))).thenReturn(resultWithAllStates);
+        StreamsGroupCommand.StreamsGroupService service = getStreamsGroupService(cgcArgs);
+        Set<GroupListing> expectedListing = new HashSet<>(Arrays.asList(
             new GroupListing(firstGroup, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.STABLE)),
-            new GroupListing(secondGroup, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.EMPTY)));
+            new GroupListing(secondGroup, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.EMPTY))));
 
         final Set[] foundListing = new Set[]{Set.of()};
         TestUtils.waitForCondition(() -> {
-            foundListing[0] = new HashSet<>(service.listStreamsGroupsInStates(Set.of(GroupState.values())));
+            foundListing[0] = new HashSet<>(service.listStreamsGroupsInStates(new HashSet<>(Arrays.asList(GroupState.values()))));
             return Objects.equals(expectedListing, foundListing[0]);
         }, "Expected to show groups " + expectedListing + ", but found " + foundListing[0]);
 
@@ -136,7 +143,7 @@ public class StreamsGroupCommandTest {
         when(resultWithStableState.all()).thenReturn(KafkaFuture.completedFuture(List.of(
             new GroupListing(firstGroup, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.STABLE))
         )));
-        when(adminClient.listGroups(any(ListGroupsOptions.class))).thenReturn(resultWithStableState);
+        when(ADMIN_CLIENT.listGroups(any(ListGroupsOptions.class))).thenReturn(resultWithStableState);
         Set<GroupListing> expectedListingStable = Set.of(
             new GroupListing(firstGroup, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.STABLE)));
 
@@ -152,8 +159,7 @@ public class StreamsGroupCommandTest {
 
     @Test
     public void testDescribeStreamsGroups() throws Exception {
-        String firstGroup = "group1";
-        Admin adminClient = mock(KafkaAdminClient.class);
+        String firstGroup = "foo-group";
         DescribeStreamsGroupsResult result = mock(DescribeStreamsGroupsResult.class);
         Map<String, StreamsGroupDescription> resultMap = new HashMap<>();
         StreamsGroupDescription exp = new StreamsGroupDescription(
@@ -167,10 +173,13 @@ public class StreamsGroupCommandTest {
             new Node(0, "bar", 0),
             null);
         resultMap.put(firstGroup, exp);
-
         when(result.all()).thenReturn(KafkaFuture.completedFuture(resultMap));
-        when(adminClient.describeStreamsGroups(ArgumentMatchers.anyCollection())).thenReturn(result);
-        StreamsGroupCommand.StreamsGroupService service = new StreamsGroupCommand.StreamsGroupService(null, adminClient);
+        when(ADMIN_CLIENT.describeStreamsGroups(ArgumentMatchers.anyCollection())).thenReturn(result);
+
+        StreamsGroupCommandOptions streamsGroupCommandOptions = new StreamsGroupCommandOptions(
+            new String[]{"--bootstrap-server", BOOTSTRAP_SERVERS, "--group", firstGroup, "--describe"});
+        StreamsGroupCommand.StreamsGroupService service = new StreamsGroupCommand.StreamsGroupService(streamsGroupCommandOptions, ADMIN_CLIENT);
+
         assertEquals(exp, service.getDescribeGroup(firstGroup));
 
         service.close();
@@ -179,7 +188,6 @@ public class StreamsGroupCommandTest {
     @Test
     public void testDescribeStreamsGroupsGetOffsets() throws Exception {
         String groupId = "group1";
-        Admin adminClient = mock(KafkaAdminClient.class);
 
         ListOffsetsResult startOffset = mock(ListOffsetsResult.class);
         Map<TopicPartition, ListOffsetsResult.ListOffsetsResultInfo> startOffsetResultMap = new HashMap<>();
@@ -192,14 +200,22 @@ public class StreamsGroupCommandTest {
         when(startOffset.all()).thenReturn(KafkaFuture.completedFuture(startOffsetResultMap));
         when(endOffset.all()).thenReturn(KafkaFuture.completedFuture(endOffsetResultMap));
 
-        when(adminClient.listOffsets(ArgumentMatchers.anyMap())).thenReturn(startOffset, endOffset);
+        when(ADMIN_CLIENT.listOffsets(ArgumentMatchers.anyMap())).thenReturn(startOffset, endOffset);
 
         ListStreamsGroupOffsetsResult result = mock(ListStreamsGroupOffsetsResult.class);
         Map<TopicPartition, OffsetAndMetadata> committedOffsetsMap = new HashMap<>();
         committedOffsetsMap.put(new TopicPartition("topic1", 0), new OffsetAndMetadata(12, Optional.of(0), ""));
 
-        when(adminClient.listStreamsGroupOffsets(ArgumentMatchers.anyMap())).thenReturn(result);
+        when(ADMIN_CLIENT.listStreamsGroupOffsets(ArgumentMatchers.anyMap())).thenReturn(result);
         when(result.partitionsToOffsetAndMetadata(ArgumentMatchers.anyString())).thenReturn(KafkaFuture.completedFuture(committedOffsetsMap));
+
+        DescribeStreamsGroupsResult describeResult = mock(DescribeStreamsGroupsResult.class);
+        StreamsGroupDescription groupDescription = mock(StreamsGroupDescription.class);
+        StreamsGroupSubtopologyDescription subtopology = mock(StreamsGroupSubtopologyDescription.class);
+        when(ADMIN_CLIENT.describeStreamsGroups(List.of(groupId))).thenReturn(describeResult);
+        when(describeResult.all()).thenReturn(KafkaFuture.completedFuture(Map.of(groupId, groupDescription)));
+        when(groupDescription.subtopologies()).thenReturn(List.of(subtopology));
+        when(subtopology.sourceTopics()).thenReturn(List.of("topic1"));
 
         StreamsGroupMemberDescription description = new StreamsGroupMemberDescription("foo", 0, Optional.empty(),
             Optional.empty(), "bar", "baz", 0, "qux",
@@ -207,7 +223,7 @@ public class StreamsGroupCommandTest {
             new StreamsGroupMemberAssignment(List.of(), List.of(), List.of()), new StreamsGroupMemberAssignment(List.of(), List.of(), List.of()),
             false);
         StreamsGroupDescription x = new StreamsGroupDescription(
-            "group1",
+            groupId,
             0,
             0,
             0,
@@ -216,11 +232,10 @@ public class StreamsGroupCommandTest {
             GroupState.STABLE,
             new Node(0, "host", 0),
             null);
-        DescribeStreamsGroupsResult describeStreamsGroupsResult = mock(DescribeStreamsGroupsResult.class);
-        when(describeStreamsGroupsResult.all()).thenReturn(KafkaFuture.completedFuture(Map.of(groupId, x)));
-        when(adminClient.describeStreamsGroups(List.of(groupId))).thenReturn(describeStreamsGroupsResult);
+        StreamsGroupCommandOptions streamsGroupCommandOptions = new StreamsGroupCommandOptions(
+            new String[]{"--bootstrap-server", BOOTSTRAP_SERVERS, "--group", groupId, "--describe"});
 
-        StreamsGroupCommand.StreamsGroupService service = new StreamsGroupCommand.StreamsGroupService(null, adminClient);
+        StreamsGroupCommand.StreamsGroupService service = new StreamsGroupCommand.StreamsGroupService(streamsGroupCommandOptions, ADMIN_CLIENT);
         Map<TopicPartition, StreamsGroupCommand.OffsetsInfo> lags = service.getOffsets(x);
 
         assertEquals(1, lags.size());
@@ -239,8 +254,82 @@ public class StreamsGroupCommandTest {
     }
 
     @Test
-    public void testRetrieveInternalTopics() {
+    public void testGroupStatesFromString() {
+        Set<GroupState> result = StreamsGroupCommand.groupStatesFromString("empty");
+        assertEquals(new HashSet<>(List.of(GroupState.EMPTY)), result);
+        result = StreamsGroupCommand.groupStatesFromString("EMPTY");
+        assertEquals(new HashSet<>(List.of(GroupState.EMPTY)), result);
+
+        result = StreamsGroupCommand.groupStatesFromString("notready");
+        assertEquals(new HashSet<>(List.of(GroupState.NOT_READY)), result);
+        result = StreamsGroupCommand.groupStatesFromString("notReady");
+        assertEquals(new HashSet<>(List.of(GroupState.NOT_READY)), result);
+
+        result = StreamsGroupCommand.groupStatesFromString("assigning");
+        assertEquals(new HashSet<>(List.of(GroupState.ASSIGNING)), result);
+        result = StreamsGroupCommand.groupStatesFromString("ASSIGNING");
+        assertEquals(new HashSet<>(List.of(GroupState.ASSIGNING)), result);
+
+        result = StreamsGroupCommand.groupStatesFromString("RECONCILING");
+        assertEquals(new HashSet<>(List.of(GroupState.RECONCILING)), result);
+        result = StreamsGroupCommand.groupStatesFromString("reconCILING");
+        assertEquals(new HashSet<>(List.of(GroupState.RECONCILING)), result);
+
+        result = StreamsGroupCommand.groupStatesFromString("STABLE");
+        assertEquals(new HashSet<>(List.of(GroupState.STABLE)), result);
+        result = StreamsGroupCommand.groupStatesFromString("stable");
+        assertEquals(new HashSet<>(List.of(GroupState.STABLE)), result);
+
+        result = StreamsGroupCommand.groupStatesFromString("DEAD");
+        assertEquals(new HashSet<>(List.of(GroupState.DEAD)), result);
+        result = StreamsGroupCommand.groupStatesFromString("dead");
+        assertEquals(new HashSet<>(List.of(GroupState.DEAD)), result);
+
+        assertThrow("preparingRebalance");
+        assertThrow("completingRebalance");
+        assertThrow("bad, wrong");
+        assertThrow("  bad, Stable");
+        assertThrow("   ,   ,");
+    }
+
+    @Test
+    public void testAdminRequestsForResetOffsets() {
         Admin adminClient = mock(KafkaAdminClient.class);
+        String groupId = "foo-group";
+        List<String> args = new ArrayList<>(Arrays.asList("--bootstrap-server", "localhost:9092", "--group", groupId, "--reset-offsets", "--input-topic", "topic1", "--to-latest"));
+        List<String> topics = List.of("topic1");
+
+        when(adminClient.describeStreamsGroups(List.of(groupId)))
+            .thenReturn(describeStreamsResult(groupId, GroupState.DEAD));
+        when(adminClient.describeTopics(eq(topics), any(DescribeTopicsOptions.class)))
+            .thenReturn(describeTopicsResult(topics, 1));
+        when(adminClient.listOffsets(any(), any()))
+            .thenReturn(listOffsetsResult());
+        ListGroupsResult listGroupsResult = listGroupResult(groupId);
+        when(adminClient.listGroups(any(ListGroupsOptions.class))).thenReturn(listGroupsResult);
+        ListStreamsGroupOffsetsResult result = mock(ListStreamsGroupOffsetsResult.class);
+        Map<TopicPartition, OffsetAndMetadata> committedOffsetsMap = new HashMap<>();
+        committedOffsetsMap.put(new TopicPartition("topic1", 0), mock(OffsetAndMetadata.class));
+        when(adminClient.listStreamsGroupOffsets(ArgumentMatchers.anyMap())).thenReturn(result);
+        when(result.partitionsToOffsetAndMetadata(ArgumentMatchers.anyString())).thenReturn(KafkaFuture.completedFuture(committedOffsetsMap));
+
+        StreamsGroupCommand.StreamsGroupService service = getStreamsGroupService(args.toArray(new String[0]), adminClient);
+        Map<String, Map<TopicPartition, OffsetAndMetadata>> resetResult = service.resetOffsets();
+
+        assertEquals(Collections.singleton(groupId), resetResult.keySet());
+        assertEquals(new HashSet<>(List.of(new TopicPartition(topics.get(0), 0))),
+            resetResult.get(groupId).keySet());
+
+        verify(adminClient, times(1)).describeStreamsGroups(List.of(groupId));
+        verify(adminClient, times(1)).describeTopics(eq(topics), any(DescribeTopicsOptions.class));
+        verify(adminClient, times(1)).listOffsets(any(), any());
+        verify(adminClient, times(1)).listStreamsGroupOffsets(any());
+
+        service.close();
+    }
+
+    @Test
+    public void testRetrieveInternalTopics() {
         String groupId = "foo-group";
         List<String> args = new ArrayList<>(Arrays.asList("--bootstrap-server", "localhost:9092", "--group", groupId, "--delete"));
         List<String> sourceTopics = List.of("source-topic1", "source-topic2");
@@ -268,14 +357,14 @@ public class StreamsGroupCommandTest {
             null));
         DescribeStreamsGroupsResult result = mock(DescribeStreamsGroupsResult.class);
         when(result.all()).thenReturn(KafkaFuture.completedFuture(resultMap));
-        when(adminClient.describeStreamsGroups(ArgumentMatchers.anyCollection())).thenReturn(result);
+        when(ADMIN_CLIENT.describeStreamsGroups(ArgumentMatchers.anyCollection())).thenReturn(result);
 
-        StreamsGroupCommand.StreamsGroupService service = getStreamsGroupService(args.toArray(new String[0]), adminClient);
+        StreamsGroupCommand.StreamsGroupService service = getStreamsGroupService(args.toArray(new String[0]));
         Map<String, List<String>> internalTopics = service.retrieveInternalTopics(List.of(groupId));
 
         assertNotNull(internalTopics.get(groupId));
         assertEquals(4, internalTopics.get(groupId).size());
-        assertEquals(Set.of(groupId + "-1-changelog", groupId + "-2-changelog", groupId + "-1-repartition", groupId + "-2-repartition"),
+        assertEquals(new HashSet<>(List.of(groupId + "-1-changelog", groupId + "-2-changelog", groupId + "-1-repartition", groupId + "-2-repartition")),
             new HashSet<>(internalTopics.get(groupId)));
         assertFalse(internalTopics.get(groupId).stream().anyMatch(List.of("some-pre-fix-changelog", groupId + "-some-thing")::contains));
         assertFalse(internalTopics.get(groupId).stream().anyMatch(sourceTopics::contains));
@@ -288,7 +377,7 @@ public class StreamsGroupCommandTest {
     public void testDeleteStreamsGroup() {
         Admin adminClient = mock(KafkaAdminClient.class);
         String groupId = "foo-group";
-        List<String> args = new ArrayList<>(Arrays.asList("--bootstrap-server", "localhost:9092", "--group", groupId, "--delete"));
+        List<String> args = new ArrayList<>(Arrays.asList("--bootstrap-server", "localhost:9092", "--group", groupId, "--delete", "--delete-all-internal-topics"));
 
         DeleteStreamsGroupsResult deleteStreamsGroupsResult = mock(DeleteStreamsGroupsResult.class);
         when(adminClient.deleteStreamsGroups(eq(List.of(groupId)), any(DeleteStreamsGroupsOptions.class))).thenReturn(deleteStreamsGroupsResult);
@@ -341,43 +430,17 @@ public class StreamsGroupCommandTest {
         service.close();
     }
 
-    @Test
-    public void testGroupStatesFromString() {
-        Set<GroupState> result = StreamsGroupCommand.groupStatesFromString("empty");
-        assertEquals(Set.of(GroupState.EMPTY), result);
-        result = StreamsGroupCommand.groupStatesFromString("EMPTY");
-        assertEquals(Set.of(GroupState.EMPTY), result);
+    private ListGroupsResult listGroupResult(String groupId) {
+        ListGroupsResult listGroupsResult = mock(ListGroupsResult.class);
+        when(listGroupsResult.all()).thenReturn(KafkaFuture.completedFuture(List.of(
+            new GroupListing(groupId, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.DEAD))
+        )));
+        return listGroupsResult;
+    }
 
-        result = StreamsGroupCommand.groupStatesFromString("notready");
-        assertEquals(Set.of(GroupState.NOT_READY), result);
-        result = StreamsGroupCommand.groupStatesFromString("notReady");
-        assertEquals(Set.of(GroupState.NOT_READY), result);
-
-        result = StreamsGroupCommand.groupStatesFromString("assigning");
-        assertEquals(Set.of(GroupState.ASSIGNING), result);
-        result = StreamsGroupCommand.groupStatesFromString("ASSIGNING");
-        assertEquals(Set.of(GroupState.ASSIGNING), result);
-
-        result = StreamsGroupCommand.groupStatesFromString("RECONCILING");
-        assertEquals(Set.of(GroupState.RECONCILING), result);
-        result = StreamsGroupCommand.groupStatesFromString("reconCILING");
-        assertEquals(Set.of(GroupState.RECONCILING), result);
-
-        result = StreamsGroupCommand.groupStatesFromString("STABLE");
-        assertEquals(Set.of(GroupState.STABLE), result);
-        result = StreamsGroupCommand.groupStatesFromString("stable");
-        assertEquals(Set.of(GroupState.STABLE), result);
-
-        result = StreamsGroupCommand.groupStatesFromString("DEAD");
-        assertEquals(Set.of(GroupState.DEAD), result);
-        result = StreamsGroupCommand.groupStatesFromString("dead");
-        assertEquals(Set.of(GroupState.DEAD), result);
-
-        assertThrow("preparingRebalance");
-        assertThrow("completingRebalance");
-        assertThrow("bad, wrong");
-        assertThrow("  bad, Stable");
-        assertThrow("   ,   ,");
+    StreamsGroupCommand.StreamsGroupService getStreamsGroupService(String[] args) {
+        StreamsGroupCommandOptions opts = new StreamsGroupCommandOptions(args);
+        return new StreamsGroupCommand.StreamsGroupService(opts, ADMIN_CLIENT);
     }
 
     StreamsGroupCommand.StreamsGroupService getStreamsGroupService(String[] args, Admin adminClient) {
@@ -386,7 +449,7 @@ public class StreamsGroupCommandTest {
     }
 
     private static void assertThrow(final String wrongState) {
-        final Set<String> validStates = Set.of("Assigning", "Dead", "Empty", "Reconciling", "Stable", "NotReady");
+        final Set<String> validStates = new HashSet<>(Arrays.asList("Assigning", "Dead", "Empty", "Reconciling", "Stable", "NotReady"));
 
         final Exception exception = assertThrows(IllegalArgumentException.class, () -> StreamsGroupCommand.groupStatesFromString(wrongState));
 
@@ -397,5 +460,47 @@ public class StreamsGroupCommandTest {
         assertEquals(Arrays.stream(exceptionMessage[1].split(","))
             .map(String::trim)
             .collect(Collectors.toSet()), validStates);
+    }
+
+    private DescribeStreamsGroupsResult describeStreamsResult(String groupId, GroupState groupState) {
+        StreamsGroupMemberDescription memberDescription = new StreamsGroupMemberDescription("foo", 0, Optional.empty(),
+            Optional.empty(), "bar", "baz", 0, "qux",
+            Optional.empty(), Map.of(), List.of(), List.of(),
+            new StreamsGroupMemberAssignment(List.of(), List.of(), List.of()), new StreamsGroupMemberAssignment(List.of(), List.of(), List.of()),
+            false);
+        StreamsGroupDescription description = new StreamsGroupDescription(groupId,
+            0,
+            0,
+            0,
+            Collections.singletonList(new StreamsGroupSubtopologyDescription("subtopologyId", Collections.emptyList(), Collections.emptyList(), Map.of(), Map.of())),
+            List.of(memberDescription),
+            groupState,
+            new Node(1, "localhost", 9092),
+            Set.of());
+        KafkaFutureImpl<StreamsGroupDescription> future = new KafkaFutureImpl<>();
+        future.complete(description);
+        return new DescribeStreamsGroupsResult(Collections.singletonMap(groupId, future));
+    }
+
+    private DescribeTopicsResult describeTopicsResult(Collection<String> topics, int numOfPartitions) {
+        Map<String, TopicDescription> topicDescriptions = new HashMap<>();
+
+        topics.forEach(topic -> {
+            List<TopicPartitionInfo> partitions = IntStream.range(0, numOfPartitions)
+                .mapToObj(i -> new TopicPartitionInfo(i, null, Collections.emptyList(), Collections.emptyList()))
+                .collect(Collectors.toList());
+            topicDescriptions.put(topic, new TopicDescription(topic, false, partitions));
+        });
+        return AdminClientTestUtils.describeTopicsResult(topicDescriptions);
+    }
+
+    private ListOffsetsResult listOffsetsResult() {
+        List<TopicPartition> topicPartitions = new ArrayList<>();
+        topicPartitions.add(new TopicPartition("topic1", 0));
+        ListOffsetsResult.ListOffsetsResultInfo resultInfo = new ListOffsetsResult.ListOffsetsResultInfo(100, System.currentTimeMillis(), Optional.of(1));
+        Map<TopicPartition, KafkaFuture<ListOffsetsResult.ListOffsetsResultInfo>> futures = topicPartitions.stream().collect(Collectors.toMap(
+            Function.identity(),
+            __ -> KafkaFuture.completedFuture(resultInfo)));
+        return new ListOffsetsResult(futures);
     }
 }
